--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <version>1.2.62</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.11.4</version>
+        </dependency>
+
 
 
     </dependencies>
